# lzy-downloader

./: .aiexclude  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODING_STANDARDS.md  GITHUB_RELEASE_NOTES_1.1.30.md  LzyDownloader.nsi  LzyDownloader.rc.in  README.md  SETTINGS.md  SPEC.md  TODO.md  UPDATE_AND_RELEASE.md  build_release.ps1  build_release.py  cmake-tests.yml  extractor_utils.py  extractors_gallery-dl.json  extractors_yt-dlp.json  main.cpp  run_headless_tests.py  update_gallery-dl_extractors.py  update_yt-dlp_extractors.py  vcpkg.json
.github/workflows/: release.yml
cmake/: deploy_openssl_runtime.cmake
docs/: API_SURFACE.md  ARCHITECTURE.md  CHANGELOG_ARCHIVE.md  CODING_STANDARDS.md  FILE_MANIFEST.md  LANGUAGES.md  SETTINGS.md  SPEC.md
src/core/: AppUpdater.cpp  AppUpdater.h  ArchiveManager.cpp  ArchiveManager.h  Aria2Daemon.cpp  BaseBinaryUpdater.cpp  BaseBinaryUpdater.h  BinaryVerifier.h  ConfigManager.cpp  ConfigManager.h  DownloadFinalizer.cpp  DownloadFinalizer.h  DownloadItem.h  DownloadManager.cpp  DownloadManager.h  DownloadManagerControls.cpp  DownloadManagerEnqueue.cpp  DownloadManagerExecution.cpp  DownloadManagerPlaylist.cpp  DownloadManagerWorkers.cpp  DownloadQueueManager.cpp  DownloadQueueState.cpp  DownloadQueueState.h  FfmpegPostProcessor.cpp  GalleryDlArgsBuilder.cpp  GalleryDlArgsBuilder.h  GalleryDlUpdater.cpp  GalleryDlUpdater.h  GalleryDlWorker.cpp  LocalApiServer.cpp  LocalApiServer.h  MetadataEmbedder.cpp  MetadataEmbedder.h  PlaylistExpander.cpp  PlaylistExpansionParser.cpp  PlaylistExpansionParser.h  PlaylistExpansionWorker.cpp  PlaylistExpansionWorker.h  PlaylistRangeDialog.cpp  PlaylistRangeDialog.h  (+22 more)
src/core/download_pipeline/: Aria2DownloadWorker.cpp  Aria2RpcClient.cpp  FfmpegMuxer.cpp  YtDlpDownloadInfoExtractor.cpp
src/resources/: convert.py
src/tests/: BaseTest.cpp  BaseTest.h  TestArchiveManager.cpp  TestArchiveManager.h  TestConfigManager.cpp  TestConfigManager.h  TestEndToEnd.cpp  TestEndToEnd.h  TestLocalApiServer.cpp  TestLocalApiServer.h  TestPlaylistRangeDialog.cpp  TestProcessUtils.cpp  TestProcessUtils.h  TestSortingManager.cpp  TestSortingManager.h  TestUIWidgets.cpp  TestUIWidgets.h  TestUrlValidator.cpp  TestUrlValidator.h  TestYtDlpArgsBuilder.cpp  TestYtDlpArgsBuilder.h  TestYtDlpWorker.cpp  TestYtDlpWorker_footer.cpp  headless_tests.yml  test_server.py  test_video.webm
src/ui/: ActiveDownloadsTab.cpp  ActiveDownloadsTab.h  AdvancedSettingsTab.cpp  AdvancedSettingsTab.h  DownloadHistoryTab.cpp  DownloadHistoryTab.h  DownloadItemWidget.cpp  DownloadItemWidget.h  DownloadSectionsDialog.cpp  FormatSelectionDialog.cpp  FormatSelectionDialog.h  LzyDownloader.desktop  MainWindow.cpp  MainWindow.h  MainWindowConnections.cpp  MainWindowDiscord.cpp  MainWindowDownloads.cpp  MainWindowHelpers.h  MainWindowUi.cpp  MainWindowUiBuilder.cpp  MainWindowUiBuilder.h  MissingBinariesDialog.cpp  RuntimeSelectionDialog.cpp  SortingRuleDialog.cpp  SortingRuleDialog.h  SortingTab.cpp  SortingTab.h  StartTab.cpp  StartTab.h  StartTabUiBuilder.cpp  StartTabUiBuilder.h  SupportedSitesDialog.cpp  ToggleSwitch.cpp  ToggleSwitch.h
src/ui/advanced_settings/: AudioSettingsPage.cpp  AuthenticationPage.cpp  BinariesPage.cpp  BinariesPage.h  ConfigurationPage.cpp  DownloadOptionsPage.cpp  LivestreamSettingsPage.cpp  LivestreamSettingsPage.h  MetadataPage.cpp  OutputTemplatesPage.cpp  OutputTemplatesPage.h  SubtitlesPage.cpp  VideoSettingsPage.cpp
src/ui/start_tab/: StartTabCommandPreviewUpdater.cpp  StartTabCommandPreviewUpdater.h  StartTabDownloadActions.cpp  StartTabDownloadActions.h  StartTabUrlHandler.cpp  StartTabUrlHandler.h
src/utils/: BinaryFinder.cpp  BinaryFinder.h  BrowserUtils.cpp  ExtractorJsonParser.cpp  LogManager.cpp
